Add Privacy Policy and Cookie Policy pages with working links and translations

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -261,6 +261,87 @@
       "content2": "This is where POC International adds measurable value. With over 30 years of leadership experience across multiple Fortune 500 companies, we have guided organizations through complex mergers and acquisitions, large-scale change management initiatives, and periods of financial instability. Our global experience uniquely positions us to support international enterprises, helping them navigate the complexities of culturally diverse workforces and align teams across geographies toward shared goals.",
       "content3": "We specialize in equipping workforces with adaptability skills and fostering cultures that thrive on transformation. Leveraging our deep expertise in complex and ever-changing industries such as IT, Finance, and Transportation, we deliver imaginative, innovative, and unconventional solutions that drive sustainable, positive outcomes.",
       "content4": "At POC International we operate with integrity, trust, and confidentiality, ensuring that every partnership is built on a foundation of credibility and shared commitment. Let us help you unlock your next milestone and position your organization for enduring success in a global marketplace."
+    },
+    "privacyPolicy": {
+      "title": "Privacy Policy | POC International",
+      "metaDescription": "POC International's Privacy Policy. Learn how we collect, use, and protect your personal information.",
+      "heroTitle": "Privacy Policy",
+      "lastUpdated": "Last Updated",
+      "lastUpdatedDate": "December 17, 2024",
+      "introduction": "Introduction",
+      "introContent1": "POC International ('we', 'our', or 'us') is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website and use our services.",
+      "introContent2": "By using our website, you consent to the data practices described in this policy. If you do not agree with the practices described in this policy, please do not use our website.",
+      "informationWeCollect": "Information We Collect",
+      "collectContent1": "We may collect information about you in a variety of ways. The information we may collect includes:",
+      "collectItem1": "Personal identification information (name, email address, phone number, company name, job title)",
+      "collectItem2": "Information you provide when contacting us or filling out forms on our website",
+      "collectItem3": "Usage data and analytics information about how you interact with our website",
+      "collectItem4": "Technical information such as IP address, browser type, device information, and operating system",
+      "collectItem5": "Cookies and similar tracking technologies",
+      "collectContent2": "We collect this information to provide, maintain, and improve our services, respond to your inquiries, and communicate with you about our services.",
+      "howWeUse": "How We Use Your Information",
+      "useContent1": "We use the information we collect for various purposes, including:",
+      "useItem1": "To provide, maintain, and improve our consulting services",
+      "useItem2": "To respond to your inquiries, comments, and requests",
+      "useItem3": "To send you newsletters, marketing communications, and updates (with your consent)",
+      "useItem4": "To analyze website usage and improve user experience",
+      "useItem5": "To comply with legal obligations and protect our rights",
+      "dataSharing": "Data Sharing and Disclosure",
+      "sharingContent1": "We do not sell, trade, or rent your personal information to third parties. We may share your information only in the following circumstances:",
+      "sharingContent2": "With service providers who assist us in operating our website and conducting our business, subject to confidentiality agreements. With legal authorities when required by law or to protect our rights. In connection with a business transfer, such as a merger or acquisition.",
+      "dataSecurity": "Data Security",
+      "securityContent": "We implement appropriate technical and organizational security measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the Internet or electronic storage is 100% secure, and we cannot guarantee absolute security.",
+      "yourRights": "Your Rights",
+      "rightsContent1": "Depending on your location, you may have certain rights regarding your personal information, including:",
+      "rightsItem1": "The right to access and receive a copy of your personal data",
+      "rightsItem2": "The right to rectify inaccurate or incomplete information",
+      "rightsItem3": "The right to request deletion of your personal data",
+      "rightsItem4": "The right to object to processing of your personal data",
+      "rightsItem5": "The right to data portability",
+      "cookies": "Cookies",
+      "cookiesContent": "Our website uses cookies to enhance your browsing experience. For detailed information about how we use cookies, please see our",
+      "cookiePolicyLink": "Cookie Policy",
+      "contactUs": "Contact Us",
+      "contactContent": "If you have questions about this Privacy Policy or wish to exercise your rights regarding your personal information, please contact us:",
+      "contactLink": "Contact Form",
+      "changes": "Changes to This Privacy Policy",
+      "changesContent": "We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the 'Last Updated' date. You are advised to review this Privacy Policy periodically for any changes."
+    },
+    "cookiePolicy": {
+      "title": "Cookie Policy | POC International",
+      "metaDescription": "Learn about how POC International uses cookies and similar technologies on our website.",
+      "heroTitle": "Cookie Policy",
+      "lastUpdated": "Last Updated",
+      "lastUpdatedDate": "December 17, 2024",
+      "whatAreCookies": "What Are Cookies?",
+      "cookiesContent1": "Cookies are small text files that are placed on your computer or mobile device when you visit a website. They are widely used to make websites work more efficiently and provide information to website owners.",
+      "cookiesContent2": "Cookies allow a website to recognize your device and store some information about your preferences or past actions. This helps improve your browsing experience by remembering your settings and preferences.",
+      "howWeUse": "How We Use Cookies",
+      "useContent1": "We use cookies for the following purposes:",
+      "useItem1": "To enable certain functions of our website",
+      "useItem2": "To provide analytics and understand how visitors use our website",
+      "useItem3": "To store your preferences and settings",
+      "useItem4": "To improve website performance and user experience",
+      "useContent2": "We use both session cookies (which expire when you close your browser) and persistent cookies (which remain on your device until they expire or are deleted).",
+      "typesOfCookies": "Types of Cookies We Use",
+      "essentialTitle": "Essential Cookies",
+      "essentialContent": "These cookies are necessary for the website to function properly. They enable core functionality such as security, network management, and accessibility. You cannot opt-out of these cookies as they are essential for the website to work.",
+      "analyticsTitle": "Analytics Cookies",
+      "analyticsContent": "These cookies help us understand how visitors interact with our website by collecting and reporting information anonymously. This helps us improve the website's structure and content.",
+      "functionalTitle": "Functional Cookies",
+      "functionalContent": "These cookies allow the website to remember choices you make (such as your language preference) and provide enhanced, personalized features. They may also be used to provide services you have requested.",
+      "thirdParty": "Third-Party Cookies",
+      "thirdPartyContent1": "In addition to our own cookies, we may also use various third-party cookies to report usage statistics of the website and deliver advertisements. These third-party cookies are placed by services that appear on our pages.",
+      "thirdPartyContent2": "We do not control the setting of these cookies, so please check the third-party websites for more information about their cookies and how to manage them.",
+      "manageCookies": "Managing Cookies",
+      "manageContent1": "You can control and manage cookies in various ways. Please keep in mind that removing or blocking cookies can impact your user experience and parts of our website may no longer be fully accessible.",
+      "manageContent2": "Most browsers allow you to:",
+      "manageItem1": "See what cookies you have and delete them individually",
+      "manageItem2": "Block third-party cookies",
+      "manageItem3": "Block cookies from specific sites",
+      "contactUs": "Contact Us",
+      "contactContent": "If you have any questions about our use of cookies, please contact us:",
+      "contactLink": "Contact Form"
     }
   }
 }
