--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -261,6 +261,87 @@
       "content2": "C'est là que POC International ajoute une valeur mesurable. Avec plus de 30 ans d'expérience en leadership dans plusieurs entreprises Fortune 500, nous avons guidé les organisations à travers des fusions et acquisitions complexes, des initiatives de gestion du changement à grande échelle et des périodes d'instabilité financière. Notre expérience mondiale nous positionne de manière unique pour soutenir les entreprises internationales, les aidant à naviguer dans les complexités de main-d'œuvres culturellement diverses et à aligner les équipes à travers les géographies vers des objectifs partagés.",
       "content3": "Nous nous spécialisons dans l'équipement des main-d'œuvres avec des compétences d'adaptabilité et la promotion de cultures qui prospèrent sur la transformation. En tirant parti de notre expertise approfondie dans des industries complexes et en constante évolution telles que l'IT, la Finance et les Transports, nous offrons des solutions imaginatives, innovantes et non conventionnelles qui stimulent des résultats durables et positifs.",
       "content4": "Chez POC International, nous opérons avec intégrité, confiance et confidentialité, garantissant que chaque partenariat est construit sur une base de crédibilité et d'engagement partagé. Laissez-nous vous aider à débloquer votre prochain jalon et positionner votre organisation pour un succès durable dans un marché mondial."
+    },
+    "privacyPolicy": {
+      "title": "Politique de Confidentialité | POC International",
+      "metaDescription": "Politique de Confidentialité de POC International. Découvrez comment nous collectons, utilisons et protégeons vos informations personnelles.",
+      "heroTitle": "Politique de Confidentialité",
+      "lastUpdated": "Dernière Mise à Jour",
+      "lastUpdatedDate": "17 Décembre 2024",
+      "introduction": "Introduction",
+      "introContent1": "POC International ('nous', 'notre' ou 'nos') s'engage à protéger votre vie privée. Cette Politique de Confidentialité explique comment nous collectons, utilisons, divulguons et protégeons vos informations lorsque vous visitez notre site web et utilisez nos services.",
+      "introContent2": "En utilisant notre site web, vous consentez aux pratiques de données décrites dans cette politique. Si vous n'êtes pas d'accord avec les pratiques décrites dans cette politique, veuillez ne pas utiliser notre site web.",
+      "informationWeCollect": "Informations Que Nous Collectons",
+      "collectContent1": "Nous pouvons collecter des informations vous concernant de diverses manières. Les informations que nous pouvons collecter incluent:",
+      "collectItem1": "Informations d'identification personnelle (nom, adresse e-mail, numéro de téléphone, nom de l'entreprise, titre du poste)",
+      "collectItem2": "Informations que vous fournissez lorsque vous nous contactez ou remplissez des formulaires sur notre site web",
+      "collectItem3": "Données d'utilisation et informations analytiques sur la façon dont vous interagissez avec notre site web",
+      "collectItem4": "Informations techniques telles que l'adresse IP, le type de navigateur, les informations sur l'appareil et le système d'exploitation",
+      "collectItem5": "Cookies et technologies de suivi similaires",
+      "collectContent2": "Nous collectons ces informations pour fournir, maintenir et améliorer nos services, répondre à vos demandes et communiquer avec vous concernant nos services.",
+      "howWeUse": "Comment Nous Utilisons Vos Informations",
+      "useContent1": "Nous utilisons les informations que nous collectons à diverses fins, notamment:",
+      "useItem1": "Pour fournir, maintenir et améliorer nos services de conseil",
+      "useItem2": "Pour répondre à vos demandes, commentaires et questions",
+      "useItem3": "Pour vous envoyer des newsletters, des communications marketing et des mises à jour (avec votre consentement)",
+      "useItem4": "Pour analyser l'utilisation du site web et améliorer l'expérience utilisateur",
+      "useItem5": "Pour se conformer aux obligations légales et protéger nos droits",
+      "dataSharing": "Partage et Divulgation des Données",
+      "sharingContent1": "Nous ne vendons, n'échangeons ni ne louons vos informations personnelles à des tiers. Nous ne pouvons partager vos informations que dans les circonstances suivantes:",
+      "sharingContent2": "Avec des prestataires de services qui nous aident à exploiter notre site web et à mener nos activités, sous réserve d'accords de confidentialité. Avec les autorités légales lorsque la loi l'exige ou pour protéger nos droits. Dans le cadre d'un transfert commercial, tel qu'une fusion ou une acquisition.",
+      "dataSecurity": "Sécurité des Données",
+      "securityContent": "Nous mettons en œuvre des mesures de sécurité techniques et organisationnelles appropriées pour protéger vos informations personnelles contre l'accès non autorisé, l'altération, la divulgation ou la destruction. Cependant, aucune méthode de transmission sur Internet ou de stockage électronique n'est sécurisée à 100%, et nous ne pouvons garantir une sécurité absolue.",
+      "yourRights": "Vos Droits",
+      "rightsContent1": "Selon votre localisation, vous pouvez avoir certains droits concernant vos informations personnelles, notamment:",
+      "rightsItem1": "Le droit d'accéder et de recevoir une copie de vos données personnelles",
+      "rightsItem2": "Le droit de rectifier des informations inexactes ou incomplètes",
+      "rightsItem3": "Le droit de demander la suppression de vos données personnelles",
+      "rightsItem4": "Le droit de vous opposer au traitement de vos données personnelles",
+      "rightsItem5": "Le droit à la portabilité des données",
+      "cookies": "Cookies",
+      "cookiesContent": "Notre site web utilise des cookies pour améliorer votre expérience de navigation. Pour des informations détaillées sur la façon dont nous utilisons les cookies, veuillez consulter notre",
+      "cookiePolicyLink": "Politique des Cookies",
+      "contactUs": "Nous Contacter",
+      "contactContent": "Si vous avez des questions sur cette Politique de Confidentialité ou souhaitez exercer vos droits concernant vos informations personnelles, veuillez nous contacter:",
+      "contactLink": "Formulaire de Contact",
+      "changes": "Modifications de Cette Politique de Confidentialité",
+      "changesContent": "Nous pouvons mettre à jour cette Politique de Confidentialité de temps à autre. Nous vous informerons de tout changement en publiant la nouvelle Politique de Confidentialité sur cette page et en mettant à jour la date de 'Dernière Mise à Jour'. Il est conseillé de consulter périodiquement cette Politique de Confidentialité pour tout changement."
+    },
+    "cookiePolicy": {
+      "title": "Politique des Cookies | POC International",
+      "metaDescription": "Découvrez comment POC International utilise les cookies et technologies similaires sur notre site web.",
+      "heroTitle": "Politique des Cookies",
+      "lastUpdated": "Dernière Mise à Jour",
+      "lastUpdatedDate": "17 Décembre 2024",
+      "whatAreCookies": "Que Sont les Cookies?",
+      "cookiesContent1": "Les cookies sont de petits fichiers texte qui sont placés sur votre ordinateur ou appareil mobile lorsque vous visitez un site web. Ils sont largement utilisés pour rendre les sites web plus efficaces et fournir des informations aux propriétaires de sites web.",
+      "cookiesContent2": "Les cookies permettent à un site web de reconnaître votre appareil et de stocker des informations sur vos préférences ou actions passées. Cela aide à améliorer votre expérience de navigation en mémorisant vos paramètres et préférences.",
+      "howWeUse": "Comment Nous Utilisons les Cookies",
+      "useContent1": "Nous utilisons les cookies aux fins suivantes:",
+      "useItem1": "Pour activer certaines fonctions de notre site web",
+      "useItem2": "Pour fournir des analyses et comprendre comment les visiteurs utilisent notre site web",
+      "useItem3": "Pour stocker vos préférences et paramètres",
+      "useItem4": "Pour améliorer les performances du site web et l'expérience utilisateur",
+      "useContent2": "Nous utilisons à la fois des cookies de session (qui expirent lorsque vous fermez votre navigateur) et des cookies persistants (qui restent sur votre appareil jusqu'à ce qu'ils expirent ou soient supprimés).",
+      "typesOfCookies": "Types de Cookies Que Nous Utilisons",
+      "essentialTitle": "Cookies Essentiels",
+      "essentialContent": "Ces cookies sont nécessaires au bon fonctionnement du site web. Ils activent les fonctionnalités de base telles que la sécurité, la gestion du réseau et l'accessibilité. Vous ne pouvez pas refuser ces cookies car ils sont essentiels au fonctionnement du site web.",
+      "analyticsTitle": "Cookies d'Analyse",
+      "analyticsContent": "Ces cookies nous aident à comprendre comment les visiteurs interagissent avec notre site web en collectant et rapportant des informations de manière anonyme. Cela nous aide à améliorer la structure et le contenu du site web.",
+      "functionalTitle": "Cookies Fonctionnels",
+      "functionalContent": "Ces cookies permettent au site web de se souvenir des choix que vous faites (tels que votre préférence de langue) et de fournir des fonctionnalités améliorées et personnalisées. Ils peuvent également être utilisés pour fournir les services que vous avez demandés.",
+      "thirdParty": "Cookies Tiers",
+      "thirdPartyContent1": "En plus de nos propres cookies, nous pouvons également utiliser divers cookies tiers pour rapporter les statistiques d'utilisation du site web et diffuser des publicités. Ces cookies tiers sont placés par des services qui apparaissent sur nos pages.",
+      "thirdPartyContent2": "Nous ne contrôlons pas le paramétrage de ces cookies, veuillez donc consulter les sites web tiers pour plus d'informations sur leurs cookies et comment les gérer.",
+      "manageCookies": "Gestion des Cookies",
+      "manageContent1": "Vous pouvez contrôler et gérer les cookies de diverses manières. Veuillez garder à l'esprit que la suppression ou le blocage des cookies peut affecter votre expérience utilisateur et certaines parties de notre site web peuvent ne plus être entièrement accessibles.",
+      "manageContent2": "La plupart des navigateurs vous permettent de:",
+      "manageItem1": "Voir quels cookies vous avez et les supprimer individuellement",
+      "manageItem2": "Bloquer les cookies tiers",
+      "manageItem3": "Bloquer les cookies de sites spécifiques",
+      "contactUs": "Nous Contacter",
+      "contactContent": "Si vous avez des questions sur notre utilisation des cookies, veuillez nous contacter:",
+      "contactLink": "Formulaire de Contact"
     }
   }
 }
