Remove careers section and add important footer pages: Terms, Find Consultant, Find Office, Business Transformation, Talent Acquisition

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -342,6 +342,125 @@
       "contactUs": "Contact Us",
       "contactContent": "If you have any questions about our use of cookies, please contact us:",
       "contactLink": "Contact Form"
+    },
+    "termsOfService": {
+      "title": "Terms of Service | POC International",
+      "metaDescription": "Terms of Service for POC International. Read our terms and conditions for using our website and services.",
+      "heroTitle": "Terms of Service",
+      "lastUpdated": "Last Updated",
+      "lastUpdatedDate": "December 17, 2024",
+      "acceptance": "Acceptance of Terms",
+      "acceptanceContent": "By accessing and using the POC International website and services, you accept and agree to be bound by these Terms of Service. If you do not agree to these terms, please do not use our website or services.",
+      "useOfServices": "Use of Services",
+      "useContent1": "You agree to use our services only for lawful purposes and in accordance with these Terms. You agree not to:",
+      "useItem1": "Violate any applicable laws or regulations",
+      "useItem2": "Infringe upon the rights of others",
+      "useItem3": "Transmit any harmful or malicious code",
+      "useItem4": "Interfere with or disrupt our services",
+      "intellectualProperty": "Intellectual Property",
+      "intellectualPropertyContent": "All content on this website, including text, graphics, logos, images, and software, is the property of POC International or its content suppliers and is protected by international copyright and trademark laws. You may not reproduce, distribute, or create derivative works from this content without our express written permission.",
+      "userContent": "User Content",
+      "userContentText": "Any content you submit to our website, including but not limited to comments, feedback, or inquiries, becomes the property of POC International. By submitting content, you grant us a worldwide, royalty-free license to use, reproduce, and distribute such content.",
+      "disclaimers": "Disclaimers",
+      "disclaimersContent1": "The information on this website is provided 'as is' without warranties of any kind, either express or implied. POC International does not warrant that the website will be uninterrupted, secure, or error-free.",
+      "disclaimersContent2": "We reserve the right to modify, suspend, or discontinue any aspect of our services at any time without prior notice.",
+      "limitationOfLiability": "Limitation of Liability",
+      "limitationContent": "To the fullest extent permitted by law, POC International shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising out of or relating to your use of our website or services.",
+      "indemnification": "Indemnification",
+      "indemnificationContent": "You agree to indemnify and hold harmless POC International, its officers, directors, employees, and agents from any claims, damages, losses, liabilities, and expenses arising out of your use of our services or violation of these Terms.",
+      "changes": "Changes to Terms",
+      "changesContent": "We reserve the right to modify these Terms of Service at any time. We will notify users of any material changes by posting the updated terms on this page. Your continued use of our services after such changes constitutes acceptance of the new terms.",
+      "contactUs": "Contact Us",
+      "contactContent": "If you have questions about these Terms of Service, please contact us:",
+      "contactLink": "Contact Form"
+    },
+    "findAConsultant": {
+      "title": "Find a Consultant | POC International",
+      "metaDescription": "Find expert consultants at POC International. Connect with our global network of experienced professionals to help transform your business.",
+      "heroTitle": "Find a Consultant",
+      "heroSubtitle": "Connect with our global network of expert consultants",
+      "searchTitle": "Search for a Consultant",
+      "searchPlaceholder": "Search by name, expertise, or location...",
+      "expertiseLabel": "Expertise Area",
+      "allExpertise": "All Expertise Areas",
+      "expertiseAreas": "Expertise Areas",
+      "expertise1": "Organizational Transformation",
+      "expertise2": "Performance Optimization",
+      "expertise3": "Leadership Development",
+      "expertise4": "Talent Acquisition",
+      "expertise5": "Data Management & Insights",
+      "expertise6": "Customer Experience",
+      "expertiseDescription": "Expert consultants ready to help transform your business",
+      "contactTitle": "Need Help Finding the Right Consultant?",
+      "contactContent": "Our team is here to help you find the perfect consultant for your needs. Contact us to discuss your requirements and we'll match you with the right expert.",
+      "emailLabel": "consultants@pocinternational.com",
+      "phoneLabel": "+1 (555) 123-4567"
+    },
+    "findAnOffice": {
+      "title": "Find an Office | POC International",
+      "metaDescription": "Find POC International offices worldwide. Connect with our global team across multiple locations.",
+      "heroTitle": "Find an Office",
+      "heroSubtitle": "Our global presence spans multiple continents",
+      "filterTitle": "Filter by Region",
+      "allRegions": "All Regions",
+      "americas": "Americas",
+      "europe": "Europe",
+      "asia": "Asia Pacific",
+      "africa": "Africa & Middle East",
+      "officesTitle": "Our Offices",
+      "office1": {
+        "city": "New York",
+        "country": "United States",
+        "address": "123 Business Avenue, Suite 100, New York, NY 10001",
+        "phone": "+1 (212) 555-0100",
+        "email": "ny@pocinternational.com"
+      },
+      "office2": {
+        "city": "London",
+        "country": "United Kingdom",
+        "address": "456 Corporate Street, London, EC1A 1BB",
+        "phone": "+44 20 7946 0958",
+        "email": "london@pocinternational.com"
+      },
+      "office3": {
+        "city": "Singapore",
+        "country": "Singapore",
+        "address": "789 Global Plaza, Singapore 018956",
+        "phone": "+65 6123 4567",
+        "email": "singapore@pocinternational.com"
+      },
+      "globalTitle": "Global Presence",
+      "globalContent": "POC International operates across multiple continents, bringing our expertise and consulting services to clients worldwide. Our global network ensures that we can provide localized support while maintaining our high standards of excellence."
+    },
+    "businessTransformation": {
+      "title": "Business Transformation Services | POC International",
+      "metaDescription": "Transform your business for sustainable growth. POC International helps organizations navigate change, optimize operations, and achieve lasting transformation.",
+      "heroTitle": "Business Transformation",
+      "content1": "In an era of rapid change and disruption, organizations must continuously evolve to remain competitive and relevant. Business transformation is not just about making incremental improvements—it's about fundamentally reimagining how your organization operates, delivers value, and positions itself for future success.",
+      "content2": "POC International partners with organizations to navigate complex transformations, from digital modernization to organizational restructuring. We help you identify opportunities, overcome challenges, and build the capabilities needed to thrive in an ever-changing business landscape.",
+      "servicesTitle": "Our Business Transformation Services",
+      "service1": "Strategic planning and vision development",
+      "service2": "Digital transformation and technology integration",
+      "service3": "Organizational restructuring and change management",
+      "service4": "Process optimization and operational excellence",
+      "service5": "Culture transformation and employee engagement",
+      "content3": "Our approach combines deep industry expertise with proven methodologies to deliver transformation programs that drive measurable results. We work closely with leadership teams to ensure alignment, build momentum, and create sustainable change that extends beyond the initial transformation period.",
+      "content4": "Whether you're looking to modernize your operations, enter new markets, or respond to industry disruption, POC International provides the strategic guidance and execution support needed to transform your business and unlock its full potential."
+    },
+    "talentAcquisition": {
+      "title": "Talent Acquisition Services | POC International",
+      "metaDescription": "Find and attract top talent with POC International's talent acquisition services. We help organizations build high-performing teams through strategic recruitment and talent management.",
+      "heroTitle": "Talent Acquisition",
+      "content1": "In today's competitive talent market, finding and attracting the right people is critical to organizational success. Talent acquisition goes beyond traditional recruitment—it's about building a strategic approach to identifying, attracting, and securing top talent that aligns with your organization's goals and culture.",
+      "content2": "POC International helps organizations develop comprehensive talent acquisition strategies that not only fill immediate hiring needs but also build a pipeline of exceptional candidates for future growth. We understand that great talent is the foundation of great organizations, and we're committed to helping you find the people who will drive your success.",
+      "servicesTitle": "Our Talent Acquisition Services",
+      "service1": "Executive search and senior-level recruitment",
+      "service2": "Talent pipeline development and candidate sourcing",
+      "service3": "Employer branding and talent attraction strategies",
+      "service4": "Assessment and selection processes",
+      "service5": "Onboarding and talent integration support",
+      "content3": "Our talent acquisition experts leverage deep market knowledge, extensive networks, and proven methodologies to connect organizations with exceptional candidates. We take a consultative approach, working closely with hiring managers to understand their needs, culture, and strategic objectives.",
+      "content4": "From C-suite executives to specialized professionals, POC International helps you build teams that are not just qualified, but truly aligned with your organization's vision and values. Partner with us to transform your talent acquisition process and secure the people who will drive your organization forward."
     }
   }
 }
