--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -342,6 +342,125 @@
       "contactUs": "Nous Contacter",
       "contactContent": "Si vous avez des questions sur notre utilisation des cookies, veuillez nous contacter:",
       "contactLink": "Formulaire de Contact"
+    },
+    "termsOfService": {
+      "title": "Conditions d'Utilisation | POC International",
+      "metaDescription": "Conditions d'utilisation de POC International. Lisez nos conditions générales pour l'utilisation de notre site web et de nos services.",
+      "heroTitle": "Conditions d'Utilisation",
+      "lastUpdated": "Dernière Mise à Jour",
+      "lastUpdatedDate": "17 Décembre 2024",
+      "acceptance": "Acceptation des Conditions",
+      "acceptanceContent": "En accédant et en utilisant le site web et les services de POC International, vous acceptez et vous engagez à être lié par ces Conditions d'Utilisation. Si vous n'acceptez pas ces conditions, veuillez ne pas utiliser notre site web ou nos services.",
+      "useOfServices": "Utilisation des Services",
+      "useContent1": "Vous acceptez d'utiliser nos services uniquement à des fins légales et conformément à ces Conditions. Vous acceptez de ne pas:",
+      "useItem1": "Violer toute loi ou réglementation applicable",
+      "useItem2": "Porter atteinte aux droits d'autrui",
+      "useItem3": "Transmettre tout code nuisible ou malveillant",
+      "useItem4": "Interférer avec ou perturber nos services",
+      "intellectualProperty": "Propriété Intellectuelle",
+      "intellectualPropertyContent": "Tout le contenu de ce site web, y compris le texte, les graphiques, les logos, les images et les logiciels, est la propriété de POC International ou de ses fournisseurs de contenu et est protégé par les lois internationales sur le droit d'auteur et les marques de commerce. Vous ne pouvez pas reproduire, distribuer ou créer des œuvres dérivées de ce contenu sans notre permission écrite expresse.",
+      "userContent": "Contenu Utilisateur",
+      "userContentText": "Tout contenu que vous soumettez à notre site web, y compris mais sans s'y limiter les commentaires, les commentaires ou les demandes, devient la propriété de POC International. En soumettant du contenu, vous nous accordez une licence mondiale, gratuite et sans redevance pour utiliser, reproduire et distribuer ce contenu.",
+      "disclaimers": "Avertissements",
+      "disclaimersContent1": "Les informations sur ce site web sont fournies 'telles quelles' sans garanties d'aucune sorte, expresse ou implicite. POC International ne garantit pas que le site web sera ininterrompu, sécurisé ou sans erreur.",
+      "disclaimersContent2": "Nous nous réservons le droit de modifier, suspendre ou interrompre tout aspect de nos services à tout moment sans préavis.",
+      "limitationOfLiability": "Limitation de Responsabilité",
+      "limitationContent": "Dans la mesure maximale permise par la loi, POC International ne sera pas responsable de tout dommage indirect, accessoire, spécial, consécutif ou punitif résultant de ou lié à votre utilisation de notre site web ou de nos services.",
+      "indemnification": "Indemnisation",
+      "indemnificationContent": "Vous acceptez d'indemniser et de dégager de toute responsabilité POC International, ses dirigeants, directeurs, employés et agents de toute réclamation, dommage, perte, responsabilité et dépense résultant de votre utilisation de nos services ou de la violation de ces Conditions.",
+      "changes": "Modifications des Conditions",
+      "changesContent": "Nous nous réservons le droit de modifier ces Conditions d'Utilisation à tout moment. Nous informerons les utilisateurs de tout changement matériel en publiant les conditions mises à jour sur cette page. Votre utilisation continue de nos services après de tels changements constitue une acceptation des nouvelles conditions.",
+      "contactUs": "Nous Contacter",
+      "contactContent": "Si vous avez des questions sur ces Conditions d'Utilisation, veuillez nous contacter:",
+      "contactLink": "Formulaire de Contact"
+    },
+    "findAConsultant": {
+      "title": "Trouver un Consultant | POC International",
+      "metaDescription": "Trouvez des consultants experts chez POC International. Connectez-vous avec notre réseau mondial de professionnels expérimentés pour aider à transformer votre entreprise.",
+      "heroTitle": "Trouver un Consultant",
+      "heroSubtitle": "Connectez-vous avec notre réseau mondial de consultants experts",
+      "searchTitle": "Rechercher un Consultant",
+      "searchPlaceholder": "Rechercher par nom, expertise ou localisation...",
+      "expertiseLabel": "Domaine d'Expertise",
+      "allExpertise": "Tous les Domaines d'Expertise",
+      "expertiseAreas": "Domaines d'Expertise",
+      "expertise1": "Transformation Organisationnelle",
+      "expertise2": "Optimisation de la Performance",
+      "expertise3": "Développement du Leadership",
+      "expertise4": "Acquisition de Talents",
+      "expertise5": "Gestion des Données & Perspectives",
+      "expertise6": "Expérience Client",
+      "expertiseDescription": "Consultants experts prêts à aider à transformer votre entreprise",
+      "contactTitle": "Besoin d'Aide pour Trouver le Bon Consultant?",
+      "contactContent": "Notre équipe est là pour vous aider à trouver le consultant parfait pour vos besoins. Contactez-nous pour discuter de vos exigences et nous vous mettrons en relation avec le bon expert.",
+      "emailLabel": "consultants@pocinternational.com",
+      "phoneLabel": "+1 (555) 123-4567"
+    },
+    "findAnOffice": {
+      "title": "Trouver un Bureau | POC International",
+      "metaDescription": "Trouvez les bureaux de POC International dans le monde entier. Connectez-vous avec notre équipe mondiale dans plusieurs emplacements.",
+      "heroTitle": "Trouver un Bureau",
+      "heroSubtitle": "Notre présence mondiale s'étend sur plusieurs continents",
+      "filterTitle": "Filtrer par Région",
+      "allRegions": "Toutes les Régions",
+      "americas": "Amériques",
+      "europe": "Europe",
+      "asia": "Asie-Pacifique",
+      "africa": "Afrique & Moyen-Orient",
+      "officesTitle": "Nos Bureaux",
+      "office1": {
+        "city": "New York",
+        "country": "États-Unis",
+        "address": "123 Business Avenue, Suite 100, New York, NY 10001",
+        "phone": "+1 (212) 555-0100",
+        "email": "ny@pocinternational.com"
+      },
+      "office2": {
+        "city": "Londres",
+        "country": "Royaume-Uni",
+        "address": "456 Corporate Street, Londres, EC1A 1BB",
+        "phone": "+44 20 7946 0958",
+        "email": "london@pocinternational.com"
+      },
+      "office3": {
+        "city": "Singapour",
+        "country": "Singapour",
+        "address": "789 Global Plaza, Singapour 018956",
+        "phone": "+65 6123 4567",
+        "email": "singapore@pocinternational.com"
+      },
+      "globalTitle": "Présence Mondiale",
+      "globalContent": "POC International opère sur plusieurs continents, apportant notre expertise et nos services de conseil aux clients du monde entier. Notre réseau mondial garantit que nous pouvons fournir un support localisé tout en maintenant nos normes élevées d'excellence."
+    },
+    "businessTransformation": {
+      "title": "Services de Transformation Commerciale | POC International",
+      "metaDescription": "Transformez votre entreprise pour une croissance durable. POC International aide les organisations à naviguer dans le changement, optimiser les opérations et réaliser une transformation durable.",
+      "heroTitle": "Transformation Commerciale",
+      "content1": "À une époque de changement et de perturbation rapides, les organisations doivent continuellement évoluer pour rester compétitives et pertinentes. La transformation commerciale ne consiste pas seulement à apporter des améliorations incrémentielles—il s'agit de réimaginer fondamentalement la façon dont votre organisation fonctionne, fournit de la valeur et se positionne pour le succès futur.",
+      "content2": "POC International s'associe aux organisations pour naviguer dans des transformations complexes, de la modernisation numérique à la restructuration organisationnelle. Nous vous aidons à identifier les opportunités, surmonter les défis et construire les capacités nécessaires pour prospérer dans un paysage commercial en constante évolution.",
+      "servicesTitle": "Nos Services de Transformation Commerciale",
+      "service1": "Planification stratégique et développement de vision",
+      "service2": "Transformation numérique et intégration technologique",
+      "service3": "Restructuration organisationnelle et gestion du changement",
+      "service4": "Optimisation des processus et excellence opérationnelle",
+      "service5": "Transformation culturelle et engagement des employés",
+      "content3": "Notre approche combine une expertise sectorielle approfondie avec des méthodologies éprouvées pour fournir des programmes de transformation qui génèrent des résultats mesurables. Nous travaillons en étroite collaboration avec les équipes de direction pour assurer l'alignement, créer de l'élan et créer un changement durable qui s'étend au-delà de la période de transformation initiale.",
+      "content4": "Que vous cherchiez à moderniser vos opérations, entrer sur de nouveaux marchés ou répondre à la perturbation de l'industrie, POC International fournit les conseils stratégiques et le support d'exécution nécessaires pour transformer votre entreprise et libérer son plein potentiel."
+    },
+    "talentAcquisition": {
+      "title": "Services d'Acquisition de Talents | POC International",
+      "metaDescription": "Trouvez et attirez les meilleurs talents avec les services d'acquisition de talents de POC International. Nous aidons les organisations à construire des équipes performantes grâce au recrutement stratégique et à la gestion des talents.",
+      "heroTitle": "Acquisition de Talents",
+      "content1": "Dans le marché des talents compétitif d'aujourd'hui, trouver et attirer les bonnes personnes est essentiel au succès organisationnel. L'acquisition de talents va au-delà du recrutement traditionnel—il s'agit de construire une approche stratégique pour identifier, attirer et sécuriser les meilleurs talents qui s'alignent avec les objectifs et la culture de votre organisation.",
+      "content2": "POC International aide les organisations à développer des stratégies d'acquisition de talents complètes qui non seulement répondent aux besoins de recrutement immédiats mais construisent également un pipeline de candidats exceptionnels pour la croissance future. Nous comprenons que les grands talents sont la fondation des grandes organisations, et nous nous engageons à vous aider à trouver les personnes qui stimuleront votre succès.",
+      "servicesTitle": "Nos Services d'Acquisition de Talents",
+      "service1": "Recherche de cadres et recrutement de niveau supérieur",
+      "service2": "Développement de pipeline de talents et sourcing de candidats",
+      "service3": "Marque employeur et stratégies d'attraction de talents",
+      "service4": "Processus d'évaluation et de sélection",
+      "service5": "Support d'intégration et d'intégration des talents",
+      "content3": "Nos experts en acquisition de talents tirent parti d'une connaissance approfondie du marché, de réseaux étendus et de méthodologies éprouvées pour connecter les organisations avec des candidats exceptionnels. Nous adoptons une approche consultative, travaillant en étroite collaboration avec les responsables du recrutement pour comprendre leurs besoins, leur culture et leurs objectifs stratégiques.",
+      "content4": "Des cadres dirigeants aux professionnels spécialisés, POC International vous aide à construire des équipes qui ne sont pas seulement qualifiées, mais vraiment alignées avec la vision et les valeurs de votre organisation. Partenaires avec nous pour transformer votre processus d'acquisition de talents et sécuriser les personnes qui feront avancer votre organisation."
     }
   }
 }
